--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = sehatbersama
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.sehatbersama
+PRODUCT_BUNDLE_IDENTIFIER = go.id.bpjs.sehatbersama
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
